refactor: non-root user

--- a/dockerfiles/ubuntu_base_build/Dockerfile
+++ b/dockerfiles/ubuntu_base_build/Dockerfile
@@ -51,5 +51,8 @@ RUN set -ex; \
 			fi \
 		) \
 	; \
-	rm -rf /var/lib/apt/lists/*
+	rm -rf /var/lib/apt/lists/* \
+RUN useradd -ms /bin/bash ferris
+USER ferris
+WORKDIR /home/ferris
 ENTRYPOINT bash
